@@ -1,0 +1,3 @@
+<?php
+
+require MODX_CORE_PATH . 'model/modx/modparser.class.php';
